# to-do-rust

./: README.md
01-factorial/: Cargo.toml
01-factorial/src/: main.rs
02-currency-converter/: Cargo.toml
02-currency-converter/src/: main.rs
03-triangle-reversed/: Cargo.toml
03-triangle-reversed/src/: main.rs
04-triangle/: Cargo.toml
04-triangle/src/: main.rs
05-odd-triangle/: Cargo.toml
05-odd-triangle/src/: main.rs
06-random-function/: Cargo.toml
06-random-function/src/: main.rs
07-guessing-game/: Cargo.toml
07-guessing-game/src/: main.rs
08-fibonacci/: Cargo.toml
08-fibonacci/src/: main.rs
extra-01-mean-median-mode/: Cargo.toml
extra-01-mean-median-mode/src/: main.rs
extra-02-pig-latin/: Cargo.toml
extra-02-pig-latin/src/: main.rs
extra-03-company-chart/: Cargo.toml  README.md
extra-03-company-chart/src/: main.rs  models.rs
