[package]
name = "company-chart"
version = "0.1.0"
authors = ["Antonio Gelameris <toniogela89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
itertools = "0.10.0"
savefile = "0.7.4"
savefile-derive = "0.7.4"

[profile.release]
lto = true
codegen-units = 1
incremental = false
